<resources>
    <string name="app_name">Resep Sunda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings2">Fajar Fap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bahan">halaman bahan</string>
    <string name="bantuan">halaman bantuan</string>
    <string name="favorite">halaman favorite</string>
    <string name="tentang">Aplikasi ini dibuat oleh</string>
    <string name="dukung">Fajar ramdhani pebrianto\nTI1260084</string>
    <string name="teknik">Teknik Informatka 2012\nPoliteknik TEDC Bandung</string>
    <string name="pembimbing">Pembimbing:</string>
    <string name="dadan"> Dadan Saepul Ramdan, M.kom</string>
    <string name="penguji">Penguji:</string>
    <string name="ridi"> Ridi Satrio Adi, M.kom</string>
    <string name="cas"> Castaka Agus S., M.kom., MCS</string>
    <string name="versi">Versi Aplikasi : 1.1</string>
    <string name="lihat">halaman lihat</string>
    <string name="title_activity_detail_resep_">DetailResep_Activity</string>
    <string name="search">input bahan anda</string>
    <string name="title_activity_bahan">Saran Resep</string>
</resources>
